--- a/css/styles.css
+++ b/css/styles.css
@@ -3,19 +3,20 @@ li{
 }
 
 .gallery{
-display: flex;
-flex-wrap: wrap;
-gap: 24px;
-padding: 24px 156px;
-justify-content: center;
-align-items: flex-start;
-
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    padding: 24px 156px;
+    justify-content: center;
+    align-items: flex-start;
+    max-width: 1440px;
 }
 
 .gallery-item{
     flex-basis: calc((360px - 3 * 24px) / 3);
     width: 360px;
     height: 200px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gallery-link{
@@ -25,6 +26,14 @@ align-items: flex-start;
 }
 
 .gallery-image{
-width: 360px;
-height: 200px;
+    width: 360px;
+    height: 200px;
+}
+
+.gallery-item:hover {
+    transform: scale(1.04);
+}
+
+.basicLightbox {
+    background: rgba(46, 47, 66, 0.80);
 }
